2012-01-16  Anders Carlsson  <andersca@apple.com>

        Crash when calling SecItemAdd with a null result pointer
        https://bugs.webkit.org/show_bug.cgi?id=76407
        <rdar://problem/10696087>

        Reviewed by Brady Eidson.

        Add null check.

        * WebProcess/mac/SecItemShimMethods.mm:
        (WebKit::webSecItemAdd):

2012-01-16  Jon Lee  <jonlee@apple.com>

        Build fix for r105086.

        * Configurations/FeatureDefines.xcconfig:

2012-01-16  Zeno Albisser  <zeno@webkit.org>

        [Qt] Fix QT_VERSION related warnings when building on Mac OS X
        https://bugs.webkit.org/show_bug.cgi?id=76340

        This bug was caused by r104826.
        As was already mentioned for https://bugs.webkit.org/show_bug.cgi?id=57239
        we should not use "using namespace WebCore" in header files,
        because it might cause ambiguous references.
        This patch reverts the changes from r104826 and r104981
        and removes the "using namespace WebCore" statement from
        two header files.

        Reviewed by Tor Arne Vestbø.

        * Shared/WebLayerTreeInfo.h:
        (WebKit::WebLayerUpdateInfo::WebLayerUpdateInfo):
        (WebKit::WebLayerAnimation::WebLayerAnimation):
        * UIProcess/LayerTreeHostProxy.h:
        (WebKit::LayerTreeHostProxy::layerByID):
        (WebKit::LayerTreeHostProxy::rootLayer):
        (WebKit::LayerTreeHostProxy::notifyAnimationStarted):
        (WebKit::LayerTreeHostProxy::notifySyncRequired):
        * UIProcess/qt/LayerTreeHostProxyQt.cpp:
        * WebProcess/WebCoreSupport/WebGraphicsLayer.h:
        * WebProcess/WebPage/qt/LayerTreeHostQt.h:

2012-01-16  Alexander Færøy  <alexander.faeroy@nokia.com>

        [Qt] Remove references to PagePointer in the FrameNetworkingContext
        https://bugs.webkit.org/show_bug.cgi?id=76342

        Reviewed by Simon Hausmann.

        * WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp: